; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/rpcrt4/extr_rpc_transport.c_RpcTransport_GetTopOfTower.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/rpcrt4/extr_rpc_transport.c_RpcTransport_GetTopOfTower.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64, i32 }
%struct.connection_ops = type { i64 (i8*, i8*, i8*)*, i32* }

@RPC_S_INVALID_RPC_PROTSEQ = common dso_local global i32 0, align 4
@RPC_S_OK = common dso_local global i32 0, align 4
@EPT_S_NOT_REGISTERED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RpcTransport_GetTopOfTower(i8* %0, i64* %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca %struct.TYPE_2__*, align 8
  %13 = alloca %struct.connection_ops*, align 8
  store i8* %0, i8** %7, align 8
  store i64* %1, i64** %8, align 8
  store i8* %2, i8** %9, align 8
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  %14 = load i8*, i8** %9, align 8
  %15 = call %struct.connection_ops* @rpcrt4_get_conn_protseq_ops(i8* %14)
  store %struct.connection_ops* %15, %struct.connection_ops** %13, align 8
  %16 = load i64*, i64** %8, align 8
  store i64 0, i64* %16, align 8
  %17 = load %struct.connection_ops*, %struct.connection_ops** %13, align 8
  %18 = icmp ne %struct.connection_ops* %17, null
  br i1 %18, label %21, label %19

19:                                               ; preds = %5
  %20 = load i32, i32* @RPC_S_INVALID_RPC_PROTSEQ, align 4
  store i32 %20, i32* %6, align 4
  br label %70

21:                                               ; preds = %5
  %22 = load i8*, i8** %7, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %36, label %24

24:                                               ; preds = %21
  %25 = load i64*, i64** %8, align 8
  store i64 24, i64* %25, align 8
  %26 = load %struct.connection_ops*, %struct.connection_ops** %13, align 8
  %27 = getelementptr inbounds %struct.connection_ops, %struct.connection_ops* %26, i32 0, i32 0
  %28 = load i64 (i8*, i8*, i8*)*, i64 (i8*, i8*, i8*)** %27, align 8
  %29 = load i8*, i8** %10, align 8
  %30 = load i8*, i8** %11, align 8
  %31 = call i64 %28(i8* null, i8* %29, i8* %30)
  %32 = load i64*, i64** %8, align 8
  %33 = load i64, i64* %32, align 8
  %34 = add i64 %33, %31
  store i64 %34, i64* %32, align 8
  %35 = load i32, i32* @RPC_S_OK, align 4
  store i32 %35, i32* %6, align 4
  br label %70

36:                                               ; preds = %21
  %37 = load i8*, i8** %7, align 8
  %38 = bitcast i8* %37 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %38, %struct.TYPE_2__** %12, align 8
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  store i32 4, i32* %40, align 8
  %41 = load %struct.connection_ops*, %struct.connection_ops** %13, align 8
  %42 = getelementptr inbounds %struct.connection_ops, %struct.connection_ops* %41, i32 0, i32 1
  %43 = load i32*, i32** %42, align 8
  %44 = getelementptr inbounds i32, i32* %43, i64 0
  %45 = load i32, i32* %44, align 4
  %46 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %47 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %46, i32 0, i32 2
  store i32 %45, i32* %47, align 8
  %48 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %49 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %48, i32 0, i32 1
  store i64 0, i64* %49, align 8
  %50 = load i8*, i8** %7, align 8
  %51 = getelementptr inbounds i8, i8* %50, i64 24
  store i8* %51, i8** %7, align 8
  %52 = load %struct.connection_ops*, %struct.connection_ops** %13, align 8
  %53 = getelementptr inbounds %struct.connection_ops, %struct.connection_ops* %52, i32 0, i32 0
  %54 = load i64 (i8*, i8*, i8*)*, i64 (i8*, i8*, i8*)** %53, align 8
  %55 = load i8*, i8** %7, align 8
  %56 = load i8*, i8** %10, align 8
  %57 = load i8*, i8** %11, align 8
  %58 = call i64 %54(i8* %55, i8* %56, i8* %57)
  %59 = load i64*, i64** %8, align 8
  store i64 %58, i64* %59, align 8
  %60 = load i64*, i64** %8, align 8
  %61 = load i64, i64* %60, align 8
  %62 = icmp ne i64 %61, 0
  br i1 %62, label %65, label %63

63:                                               ; preds = %36
  %64 = load i32, i32* @EPT_S_NOT_REGISTERED, align 4
  store i32 %64, i32* %6, align 4
  br label %70

65:                                               ; preds = %36
  %66 = load i64*, i64** %8, align 8
  %67 = load i64, i64* %66, align 8
  %68 = add i64 %67, 24
  store i64 %68, i64* %66, align 8
  %69 = load i32, i32* @RPC_S_OK, align 4
  store i32 %69, i32* %6, align 4
  br label %70

70:                                               ; preds = %65, %63, %24, %19
  %71 = load i32, i32* %6, align 4
  ret i32 %71
}

declare dso_local %struct.connection_ops* @rpcrt4_get_conn_protseq_ops(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
